--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <h1>LED Vezérlés Webszerverről</h1>
+    <h1>LED Vezérlés</h1>
     <img id="ledImage" src="/static/images/light_off.png" alt="LED Állapota"> 
     <button id="ledButton">Betöltés...</button>
     <p id="statusText">Aktuális állapot: Ismeretlen</p>
